# snapdrop

./: .gitignore  README.md
.claude/: settings.local.json
backend/: .env  .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: attendees.py  auth.py  collaborators.py  events.py  photos.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_schema.py  002_event_collaborators.py
backend/app/models/: __init__.py  attendee.py  collaborator.py  event.py  photo.py  user.py
backend/app/schemas/: attendee.py  collaborator.py  common.py  event.py  photo.py
backend/app/services/: email_service.py  qr_service.py  r2_service.py  zip_service.py
backend/app/tasks/: jobs.py  scheduler.py
backend/tests/: conftest.py  test_events.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: attendees.ts  auth.ts  client.ts  collaborators.ts  events.ts  photos.ts
frontend/src/components/admin/: CollaboratorsList.tsx  EventCard.tsx  GalleryGrid.tsx  InviteModal.tsx  QRModal.tsx
frontend/src/hooks/: useAuth.ts  useCamera.ts  useUpload.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/pages/: LandingPage.tsx
frontend/src/stores/: attendeeStore.ts  authStore.ts
frontend/src/styles/: globals.css
website/: index.html
(+12 files in other folders)
